# ttray

./: .gitignore  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-2-link
src/: app.rs  config.rs  event.rs  main.rs  ui.rs
