[package]
name = "ttray"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
system-tray = "0.7.0"
tui-tree-widget = "0.23.0"
log = "0.4.27"
simplelog = "0.12.2"
clap = { version = "4.5.39", features = ["derive"] }
